<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/cart_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cart_icon" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCart"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cart_icon" />

    <LinearLayout
        android:id="@+id/linearLayoutBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewCart">

        <TextView
            android:id="@+id/total_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="200dp"
            android:text="@string/totalbill"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/total_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="0"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutSplit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutBill">

        <TextView
            android:id="@+id/split_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="80dp"
            android:text="@string/splitbill"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/split_pax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/split_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spiltbill2"
            android:paddingRight="20dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFinalSplit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutSplit">

        <TextView
            android:id="@+id/split_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="200dp"
            android:text="@string/total_split_text"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/split_each_pax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:paddingLeft="10dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_confirmOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="90dp"
        android:text="@string/cart_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutBill" />


</androidx.constraintlayout.widget.ConstraintLayout>